--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -3,11 +3,11 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "rimraf": "~2.6.0",
+    "gulp": "4.0.0",
+    "rimraf": "2.6.3",
     "merge-stream": "1.0.1",
-    "gulp-uglify": "~1.5.3",
-    "gulp-concat": "~2.6.0",
+    "gulp-uglify": "3.0.1",
+    "gulp-concat": "2.6.1",
     "gulp-cssmin": "0.2.0",
     "gulp-sass": "4.0.2"
   },
